# pyvtt

./: .dockerignore  .gitignore  API-ENDPOINTS.md  Dockerfile  LICENSE  NOTES.md  README.md  TERMS.md  buildnumber.py  cache.py  cleanup.py  diskreport.py  engine.py  example.json  fly-dev.toml  fly-prod.toml  main.py  migration.py  orm.py  pyproject.toml  pyvtt.doxygen  requirements.txt  run-vtt.py  scene.py  server.py  settings.example.json  stats.py  test.py  test_suite.py  tests.py  utils.py  vtt-nginx.conf  vtt.py
scripts/: build.sh  run.sh
static/: assets.js  battlemap.js  dice_max.xcf  dice_poof.xcf  drawing.js  dropdown.js  errors.js  gm.js  jquery.singleclick.js  layout.css  mobile-upload.js  music.js  render.js  socket.js  ui.js  unittest.js  utils.js  version.js  webcam.js
test/: common.py  requirements.txt  test_auth_api.py  test_buildnumber.py  test_cache_integration.py  test_constant_export.py  test_engine.py  test_engine_cache.py  test_example.py  test_fancy_url_api.py  test_game.py  test_game_cache.py  test_gm.py  test_gm_cache.py  test_logging_api.py  test_otherutils.py  test_path_api.py  test_player_cache.py  test_routes.py  test_scene.py  test_server.py  test_token.py  test_vtt.py  utils.py
tests/: cache_integration.py  engine.py  engine_cache.py  example.py  fancy_url_api.py  game.py  game_cache.py  gm.py  gm_cache.py  logging_api.py  path_api.py  scene.py  token.py  utils.py
views/: battlemap.tpl  countdown.tpl  create.tpl  dropdown.tpl  error.tpl  error401.tpl  error404.tpl  error500.tpl  footer.tpl  game_board.tpl  game_gmtools.tpl  games.tpl  (+16 more)
(+140 files in other folders)
