[tool.poetry]
name = "pyvtt"
version = "1.4.5"
description = "Python-based Virtual Tabletop Tool"
authors = ["cgloeckner <cgloeckner@freenet.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
bottle = "^0.12.23"
gevent = "^21.12.0"
gevent-websocket = "^0.10.1"
patreon = "^0.5.0"
pony = "^0.7.16"
psutil = "^5.9.1"
Pillow = "^9.2.0"
emoji-country-flag = "^1.3.0"

[tool.poetry.dev-dependencies]
WebTest = "^3.0.0"
pytest = "^7.1.2"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
